Users can now upload their verification picture

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,33 +1,26 @@
 ###
 ### Frontend ###
 ###
-
 # COMMON #
-
 #do not translate
 app.name=Alovoa
-
 error.generic=An error occured. Please try again.
 success.submit.generic=Your request has been successfully submitted.
 success.clipboard=Copied to clipboard!
-error.max-chars.generic=You have reached the maximum number of characters.
+error.max-chars.generic=You have resubmitVerificationPicture()ached the maximum number of characters.
 error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
 error.media.max-size-exceeded=File is too large! Maximum size is 2MB.
 error.password-no-match=Passwords do not match.
 error.format-not-supported=Format not supported.
 success.generic=Success!
-
 accent-color=Accent Color
 alerts=Alerts
-
 bmac=Buy me a coffee
-
 cancel=Cancel
 captcha=Captcha
 chats=Chats
 comment=Comment
 contact=Contact
-
 dark=Dark
 default=Default
 description=Description
@@ -35,47 +28,35 @@ dob=Date of birth
 donate=Donate
 donated=Donated
 donations=Donations
-
 email=Email
-
 faq=FAQ
 filter=Filter
 first-name=First name
-
 gender=Gender
-
 imperial=Imperial
 imprint=Imprint
 interest=Interest
 interests=Interests
-
 km=km
 #do not translate
 kofi=Ko-fi
-
 language=Language
 last-name=Last name
 light=Light
 login=Login
 logout=Logout
-
 message=Message
 mi=mi
-
 new-password=New password
 no=No
 no-users-found=No users found
-
 optional=optional
 or=Or
-
 password=Password
 password-repeat=Repeat password
 privacy-policy=Privacy Policy
 profile=Profile
-
 reports=Reports
-
 save=Save
 search=Search
 si=SI
@@ -84,28 +65,18 @@ source-code=Source code
 sort=Sort
 submit=Submit
 subject=Subject
-
 tos=Terms of Service
-
 units=Units
-
 website=Website
-
 yes=Yes
-
 # TEMPLATE #
-
 meta.content=Meet new people in your area, absolutely privately using open-source technologies. You're only a few clicks away to find new friends, dating and sexual partners. Looking for a girlfriend, boyfriend, quick hookup, one-night stand or just someone with the same interests? No problem!
-
 blocked-users.title=Blocked users
 profile.blocked-users=Show blocked users
-
 liked-users.title=Liked users
 profile.liked-users=Show liked users
-
 disliked-users.title=Disliked users
 profile.disliked-users=Show disliked users
-
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
 profile.warning.no-description=No description found!
@@ -113,11 +84,9 @@ profile.warning.no-intention=No intention found!
 profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
 profile.warning.intention.limit=Intention changed. You cannot change it for another 24 hours.
-
 delete-account.title=Delete account
 delete-account.confirm=I hereby confirm to delete this account permanently.
 delete-account.not-active=Link is not active yet. Please check the instructions we have sent you or send another account deletion request.
-
 donate.title=Donate
 donate.notice-1=Be sure to fill in your account's email address in the message or name area.
 donate.notice-2=Use Stripe instead of PayPal because its fees are much lower.
@@ -125,9 +94,7 @@ donate.notice-3=A small amount is deducted here, corresponding to the site opera
 donate.latest-donations=Latest Donations
 donate.largest-donations=Largest Donations
 donate.donate-now=Donate now
-
 donate-list.store.warning=Donation links are not available because of store rules. Please visit this page in your browser to donate.
-
 index.cookie.notice=This site uses cookies to store the session and user preferences to function properly. Your data is safe with us, as we don't store any personal information in the cookies nor do we send any information to a third party. By continuing to use this site you agree to the use of cookies.
 index.cookie.more=Click here to learn more
 #do not translate
@@ -154,7 +121,6 @@ index.js.registration-confirm-failed=Confirmation failed, please try again!
 index.js.password-reset-requested=An email for resetting your password has been sent, please check your emails and follow the instructions.
 index.js.password-change-success=Your password has been successfully changed!
 index.js.confirm-account-deleted=Your account has been successfully deleted!
-
 login.title=Login
 login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
@@ -165,21 +131,16 @@ login.register=Don't have an account?
 login.remember=Remember me
 login.privacy-policy=Privacy policy was updated on the {0}
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
-
 message.title=Messages
 message.match=You got a match! Tap here to send a message :)
 message.video-chat=A video chat has been requested!
 message.js.error.max-length=You have reached the maximum number of characters.
 message.js.video.confirm=Invite chat partner to video chat?
-
 notification.title=Notification
 notification.liked-by=You have been liked by 
-
 password-change.title=Change password
 password-change.warning=Your password needs to be at least 7 characters long and must contain characters and numbers.
-
 password-reset.title=Reset password
-
 profile.title=Profile
 profile.webpush=Receive notifications
 profile.intention=I want...
@@ -206,12 +167,10 @@ profile.ui-design.rounded=Rounded
 profile.ui-design.angular=Angular
 profile.referrer.info=Recommend Alovoa to a friend! Both of you will a get small but permanent visibility boost if a new account is created with this link:
 profile.referrer.amount=Number of referrals left:
-
 profile.misc-info.title=More Info
 profile.misc-info.drugs.title=Drugs
 profile.misc-info.relationship.title=Relationship Status
 profile.misc-info.kids.title=Children
-
 profile.misc-info.drugs.tobacco=Tobacco
 profile.misc-info.drugs.alcohol=Alcohol
 profile.misc-info.drugs.cannabis=Cannabis
@@ -222,9 +181,12 @@ profile.misc-info.relationship.open=Open relationship
 profile.misc-info.relationship.other=It's complicated
 profile.misc-info.kids.no=No Kids
 profile.misc-info.kids.yes=Has Kids
-
+profile.profile-picture.change.description-1=Change your profile picture?
+profile.profile-picture.change.description-2=Your verification status will be removed.
+profile.verification.your-verification=Your verification picture
+profile.verification.description-1=Upload a picture of yourself showing the following characters:
+profile.verification.description-2=Simply write the text on a white sheet of paper. Make sure that your face is clearly visible.
 profile.js.delete-image.confirm=Delete selected image?
-
 profile-onboarding.profile-picture=I look like this
 profile-onboarding.description=Something about myself
 profile-onboarding.description.placeholder=I really love ice cream!
@@ -233,7 +195,6 @@ profile-onboarding.intention.warning=Can only be changed again after 24 hours
 profile-onboarding.match.title=Start getting likes!
 profile-onboarding.match.subtitle=Messages can only be sent after a match
 profile-onboarding.submit=Let's go!
-
 register.title=Register
 register.subtitle=Create a new account
 #register.warning=password-change.warning
@@ -248,7 +209,6 @@ register.login=Already have an account?
 register.oauth.google=Sign up with Google
 register.oauth.facebook=Sign up with Facebook
 register.referral-code=Referral code
-
 search.title=Search
 search.max-distance=Maximum distance
 search.sort.filter.distance=Lowest distance
@@ -261,14 +221,12 @@ search.warning.global=No compatible users in your area. Showing users all around
 search.warning.incompatible=No compatible users found. Showing incompatible users, be careful!
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 search.js.error.no-location=Position could not be determined. Make sure that your GPS is turned on.
-
 userprofile.report.confirm=Report user for violating the <a href="/tos">Terms of Service</a>?
 userprofile.num-blocks=# Blocks by users
 userprofile.num-reports=# Reports by users
 userprofile.js.block-user=Block user?
 userprofile.js.unblock-user=Unblock user?
 userprofile.js.success.report-user=User has been successfully reported!
-
 faq.title=FAQ
 faq.privacy.question=Is my data really private?
 faq.privacy.answer=Yes. Your data is not shared with a third-party.
@@ -284,13 +242,9 @@ faq.no-users.question=There are no users in my area!
 faq.no-users.answer=You can try in a few days, new users will be in your area eventually. Additionally, you can donate or tell your family and friends to make this platform even more popular!
 faq.delete-data.question=I want to delete my data, how can I do it?
 faq.delete-data.answer=We are sad to see you go, but if you are sure, click on the "Delete account" link on the bottom of your profile page. Afterwards just follow the instructions that we sent you to your email address.
-
 imprint.title=Imprint
-
 privacy.title=Privacy
-
 tos.title=Terms of service
-
 admin.title=Administration
 admin-delete-contact=Delete contact
 admin.delete-report=Delete report
@@ -301,49 +255,34 @@ admin.remove-images=Remove images
 admin.mail.send-single=Send email
 admin.mail.send-all=Send email to all
 admin.mail.send-all.confirm=You are about to send an email to all users. Are you sure?
-
-
 ###
 ### BACKEND ###
 ###
-
 # Errors #
-
 backend.error.captcha.invalid=Invalid captcha
 backend.error.register.min-age=Minimum age not reached
 backend.error.register.email-exists=Email address is already registered
 backend.error.register.email-spam=Email domain is blacklisted for spam
 backend.error.register.oauth.email-invalid=Your OAuth provider does not have a linked email address. Please add a valid email address to your OAuth provider and try again.
-
 # Web push #
-
 backend.webpush.like.subject=New like!
 backend.webpush.like.message=Click here to find out more
-
 backend.webpush.match.subject=New match!
 backend.webpush.match.message=Click here to find out more
-
 backend.webpush.message.subject=New message!
 backend.webpush.message.message=Click here to find out more
-
 # MAIL #
-
 backend.mail.register.subject=Your registration at {0}
 backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1}. Please confirm your registration: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
-
 backend.mail.password-reset.subject=Resetting your password
 backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
-
 backend.mail.account-delete-request.subject=Deleting your account
 backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. The link will be valid for 24 hours.
-
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
-
 backend.mail.account-confirmed.subject=Account confirmed
 backend.mail.account-confirmed.body=Hello {0}, <br> We have confirmed your account creation at {1}. Have fun meeting new people!
-
-# Text blocks 
+# Text blocks
 #do not translate
 backend.privacy=<h3>Privacy Policy</h3><p>This privacy policy will explain how our organization uses the personal data we collect from you when you use our website.</p><h3>What data do we collect?</h3><p>COMPANY_NAME collects the following data:</p><ul><li>Personal identification information (Name, email address, birth date, etc.).</li><li>Your location and preferences.</li><li>Any interaction you have with another user.</li></ul><h3>How do we collect your data?</h3><p>You directly provide COMPANY_NAME with most of the data we collect. We collect data and process data when you:</p><ul><li>Register online.</li><li>Provide information in your profile area.</li><li>Search for other users.</li><li>Visit any page on the website.</li><li>Interact with users on the platform.</li><li>Voluntarily complete a customer survey or provide feedback.</li></ul><h3>How will we use your data?</h3><p>COMPANY_NAME collects your data so that we can:</p><ul><li>Manage your account.</li><li>Email you with important changes and news.</li><li>Allow other users to find you.</li></ul><h3>Third-party APIs</h3><p>COMPANY_NAME uses third-party APIs of these sites</p><ul><li>openstreetmap.org. Your general location is used to render map data when searching for users.</li><li>meet.jit.si. No personal data is shared, but their service is used to enable video and audio communication between users.</li><li>google.com and facebook.com. Your personal data stays safe in our local database, but these OAuth providers are able to indentify you each time you use their services.</li></ul><h3>How do we store your data?</h3><p>COMPANY_NAME stores your data in a secure database.</p><p>COMPANY_NAME will keep your personal data for unlimited time. You can request to delete your data at all times.</p><p>COMPANY_NAME would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p><p><strong>The right to access</strong>– You have the right to request COMPANY_NAME for copies of your personal data. We may charge you a small fee for this service.</p><p><strong>The right to rectification</strong>– You have the right to request that COMPANY_NAME correct any information you believe is inaccurate. You also have the right to request COMPANY_NAME to complete the information you believe is incomplete.</p><p><strong>The right to erasure</strong>– You have the right to request that COMPANY_NAME erase your personal data, under certain conditions.</p><p><strong>The right to restrict processing</strong>- You have the right to request that COMPANY_NAME restrict the processing of your personal data, under certain conditions.</p><p><strong>The right to object to processing</strong>– You have the right to object to COMPANY_NAME – processing of your personal data, under certain conditions.</p><p><strong>The right to data portability</strong>– You have the right to request that COMPANY_NAME transfer the data that we have collected to another organization, or directly to you, under certain conditions.</p><p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please follow the instruction on how to contact us at the bottom of this page.</p><h3>Cookies</h3><p>Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology</p><p>For further information, visit allaboutcookies.org.</p><h3>How do we use cookies?</h3><p>COMPANY_NAME uses cookies in a range of ways to improve your experience on our website, including:</p><ul><li>Keeping you signed in.</li><li>Storing non-personal data.</li></ul><h3>What types of cookies do we use?</h3><p>There are a number of different types of cookies, however, our website uses:</p><ul><li>Functionality – COMPANY_NAME uses these cookies so that we recognize you on our website and remember your previously selected preferences. These could include what language you prefer and location you are in.</li><li>That's it. Unlike our competitors, we don't have any cookies that can track you.</li></ul><h3>How to manage cookies</h3><p>You can set your browser not to accept cookies, and the above website tells you how to remove cookies from your browser. However, in a few cases, some of our website features may not function as a result.</p><h3>Privacy policies of other websites</h3><p>The COMPANY_NAME website contains links to other websites. Our privacy policy applies only to our website, so if you click on a link to another website, you should read their privacy policy.</p><h3>Changes to our privacy policy</h3><p>COMPANY_NAME keeps its privacy policy under regular review and places any updates on this web page. This privacy policy was last updated on PRIVACY_UPDATE_DATE.</p><h3>How to contact us</h3><p>If you have any questions about COMPANY_NAME's privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us <a href="/imprint">here</a>. Your contact data will be saved up to 90 days.</p><h3>How delete your data</h3><p>Please follow the <a href="/faq#delete-data">instructions on our FAQ page</a></p>
 #do not translate
