Show verification status

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -186,11 +186,14 @@ profile.profile-picture.change.description-2=Your verification status will be re
 profile.verification.your-verification=Your verification picture
 profile.verification.description-1=Upload a picture of yourself showing the following characters:
 profile.verification.description-2=Simply write the text on a white sheet of paper. Make sure that your face is clearly visible.
+profile.verification.description-3=You can be verified by both us and the community.
 profile.verification.instruction-1=Do both pictures depict the same person?
 profile.verification.instruction-2=Is the verification text on a blank piece of paper?
 profile.verification.instruction-3=Do the verification texts match?
 profile.verification.vote.success=Your vote has been cast
 profile.verification.button=Verify user
+profile.verification.badge.community=Verified by the community
+profile.verification.badge.admin=Verified by us
 profile.js.delete-image.confirm=Delete selected image?
 profile-onboarding.profile-picture=I look like this
 profile-onboarding.description=Something about myself
